--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,11 @@
 {
     "name": "mberecall/kropify-laravel",
     "description": "Kropify is a tool that can be integrated into Laravel framework from version 8 and above for the purpose of giving users easy way to crop their profile pictures and cover images.",
+    "homepage": "https://github.com/mberecall/kropify-laravel",
     "keywords": [
         "kropify",     
         "laravel-kropify",
         "laravel",
-        "laravel8",
-        "laravel9",
-        "laravel10", 
         "php",
         "cropper",
         "crop",
@@ -25,7 +23,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php": "^7.2|^8.0",
         "intervention/image": "^2.7"
     },
     "autoload": {
