--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "intervention/image": "^2.7"
+        "php": "^7.2|^8.0"
     },
     "autoload": {
         "psr-4": {
